@@ -18,9 +18,11 @@ Mark Goldman
 Ryan Jordan
 Karl MacMillan
 Frank Mayer
+Anand Patel
 Don Patterson
 Chris PeBenito
 Paul Rosenfeld
+David Sugar
 Karen Vance
 Brandon Whalen
 Meggan Whalen
