@@ -1,3 +1,10 @@
+2007-07-13  J. Tang  <jtang@tresys.com>
+
+	* Java SWIG libraries now check if the libraries needs to be
+	loaded before doing such.
+
+	* Added more filtering options to libseaudit.
+
 2007-07-12  J. Tang  <jtang@tresys.com>
 
 	* seaudit_filter_set_ipaddress() is renamed to
